--- a/src/components/ListWrapper/ListItem/ListItem.css
+++ b/src/components/ListWrapper/ListItem/ListItem.css
@@ -1,7 +1,6 @@
 .listItem__wrapper {
     list-style:none;
     padding:50px 30px;
-    margin:0;
     display:flex;
     align-items: center;
 }
@@ -22,6 +21,7 @@
 }
 
 .listItem__description {
+    margin: 10px 0 20px;
     font-weight:300;
     
 }
